
Fixed issue #11. When help is requested, the help flag is no longer prefixed
with [no].

Upgraded shUnit2 to 2.1.6.

Fixed issue #12. Requesting help shouldn't be considered an error.

Added the ability to override the use of the OS default 'getopt' command by
defining the FLAGS_GETOPT_CMD variable.

Updated gen_test_results.sh and versions from shUnit2 source.


Changes with 1.0.3
------------------

MAJOR CHANGE! ``FLAGS_ARGC`` is now obsolete, and is replaced by
``FLAGS_ARGV``. See below for more info.

Fixed issue# 7 where long flags defined with '=' (e.g. --abc=123) made it
impossible for the user to know how many non-flag command-line arguments were
available because the value returned by ``FLAGS_ARGC`` was wrong. The
``FLAGS_ARGC`` value is now obsolete, but will be maintained for backwards
compatibility. The new method of getting the non-flag arguments is by executing
``eval set -- "${FLAGS_ARGV}"`` after the **FLAGS** call. The arguments will
then be available using the standard shell $#, $@, $*, $1, etc. variables.

Due to above fix for issue# 7, there is now proper support for mixing flags
with non-flag arguments on the command-line. Previously, all non-flag arguments
had to be at the end of the command-line.

Renamed ``_flags_standardGetopt()`` and ``_flags_enhancedGetopt()`` functions to
``_flags_getoptStandard()`` and ``_flags_getoptEnhanced()``.

Took out the setting and restoration of the '-u' shell flag to treat unset
variables as an error. No point in having it in this library as it is verified
in the unit tests, and provides basically no benefit.

Fixed bug under Solaris where the generated help was adding extra 'x'
characters.

Added checks for reserved flag variables (e.g. FLAGS_TRUE).

Fixed some unset variable bugs.

Now report the actual getopt error if there is one.

All tests now properly enable skipping based on whether a standard or enhanced
getopt is found.

Added the OS version to OS release for Solaris.
